feat(LP): adicionado correção de lint